gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/enum_function.d
version https://git-lfs.github.com/spec/v1
oid sha256:df1c1f66bf04f3b2d4e974f5291bafd3d902d1ffc46c9ba1d4320729dea45fbd
size 499
